--- a/README.Rmd
+++ b/README.Rmd
@@ -2,7 +2,7 @@
 title: "Introducción a IRT"
 author: "Cristian Brotfeld"
 date: "`r format(Sys.time(), '%d-%m-%Y')`"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
